--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="app.js" defer></script>
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Calculator</title>
 </head>
 <body>
     <div class="container">
